import { describe, it, expect } from 'vitest';
import { generateYAML } from '../../generator';
import {
  createQuickStartConfig,
  createZaiProviderConfig,
  createAnthropicProviderConfig,
  createCustomProviderConfig,
  createMockConfig,
  FIXED_DATE
} from '../helpers/config';
import {
  validateDockerComposeStructure,
  hasService,
  hasVolume,
  hasNetwork,
  hasEnvVar,
  getServiceEnvVar,
  getServiceImage,
  getServicePorts,
  getServiceVolumes
} from '../helpers/yaml';

describe('Quick Start Profiles - Complete File Verification with YAML Parsing', () => {
  it('should generate valid YAML structure for default quick start config (zh-CN)', async () => {
    const config = createQuickStartConfig();
    const yaml = generateYAML(config, undefined, 'zh-CN', FIXED_DATE);

    // 使用 js-yaml 验证 YAML 结构
    const validation = validateDockerComposeStructure(yaml);

    expect(validation.errors).toEqual([]);
    expect(validation.valid).toBe(true);

    // 验证服务存在（快速启动现在使用 SQLite，没有 postgres 服务）
    expect(hasService(yaml, 'hagicode')).toBe(true);
    expect(hasService(yaml, 'postgres')).toBe(false);

    // 验证卷存在（应用始终使用 data + saves 双根目录）
    expect(hasVolume(yaml, 'hagicode_data')).toBe(true);
    expect(hasVolume(yaml, 'hagicode_saves')).toBe(true);
    expect(hasVolume(yaml, 'postgres-data')).toBe(false);

    // 验证网络存在
    expect(hasNetwork(yaml, 'pcode-network')).toBe(true);

    // 验证环境变量
    expect(hasEnvVar(yaml, 'hagicode', 'ASPNETCORE_ENVIRONMENT')).toBe(true);
    expect(hasEnvVar(yaml, 'hagicode', 'ANTHROPIC_AUTH_TOKEN')).toBe(true);
    expect(hasEnvVar(yaml, 'hagicode', 'ConnectionStrings__Default')).toBe(true);

    // 验证镜像（快速启动现在使用镜像标签 0）
    expect(getServiceImage(yaml, 'hagicode')).toBe('newbe36524/hagicode:0');

    // 验证端口映射
    const ports = getServicePorts(yaml, 'hagicode');
    expect(ports).toContain('8080:45000');

    // 验证特定环境变量值
    expect(getServiceEnvVar(yaml, 'hagicode', 'TZ')).toBe('Asia/Shanghai');
    expect(getServiceEnvVar(yaml, 'hagicode', 'ASPNETCORE_ENVIRONMENT')).toBe('Production');
    expect(getServiceEnvVar(yaml, 'hagicode', 'ConnectionStrings__Default')).toBe('Data Source=/app/data/hagicode.db');
    expect(getServiceVolumes(yaml, 'hagicode')).toContain('hagicode_data:/app/data');
    expect(getServiceVolumes(yaml, 'hagicode')).toContain('hagicode_saves:/app/saves');

    // 存储完整文件快照
    expect(yaml).toMatchSnapshot('quick-start-default-zh-CN');
  });

  it('should generate valid YAML structure for default quick start config (en-US)', async () => {
    const config = createQuickStartConfig();
    const yaml = generateYAML(config, undefined, 'en-US', FIXED_DATE);

    // 验证 YAML 结构
    const validation = validateDockerComposeStructure(yaml);
    expect(validation.errors).toEqual([]);
    expect(validation.valid).toBe(true);

    // 验证服务（快速启动现在使用 SQLite，没有 postgres 服务）
    expect(hasService(yaml, 'hagicode')).toBe(true);
    expect(hasService(yaml, 'postgres')).toBe(false);
    expect(hasVolume(yaml, 'hagicode_data')).toBe(true);
    expect(hasVolume(yaml, 'hagicode_saves')).toBe(true);
    expect(getServiceEnvVar(yaml, 'hagicode', 'ConnectionStrings__Default')).toBe('Data Source=/app/data/hagicode.db');
    expect(getServiceVolumes(yaml, 'hagicode')).toContain('hagicode_data:/app/data');
    expect(getServiceVolumes(yaml, 'hagicode')).toContain('hagicode_saves:/app/saves');

    // 验证网络
    expect(hasNetwork(yaml, 'pcode-network')).toBe(true);

    // 验证注释内容（英文）
    expect(yaml).toContain('# Support Information');

    expect(yaml).toMatchSnapshot('quick-start-default-en-US');
  });

  it('should cover enabled and disabled EULA exports in quick-start mode', async () => {
    const enabledYaml = generateYAML(createQuickStartConfig({
      acceptEula: true,
    }), undefined, 'zh-CN', FIXED_DATE);
    const disabledYaml = generateYAML(createQuickStartConfig({
      acceptEula: false,
    }), undefined, 'zh-CN', FIXED_DATE);

    expect(hasEnvVar(enabledYaml, 'hagicode', 'ACCEPT_EULA')).toBe(true);
    expect(getServiceEnvVar(enabledYaml, 'hagicode', 'ACCEPT_EULA')).toBe('Y');
    expect(hasEnvVar(disabledYaml, 'hagicode', 'ACCEPT_EULA')).toBe(false);

    expect(enabledYaml).toMatchSnapshot('quick-start-eula-enabled-zh-CN');
    expect(disabledYaml).toMatchSnapshot('quick-start-eula-disabled-zh-CN');
  });

  it('should generate valid YAML structure for ZAI provider (zh-CN)', async () => {
    const config = createZaiProviderConfig();
    const yaml = generateYAML(config, undefined, 'zh-CN', FIXED_DATE);

    // 验证 YAML 结构
    const validation = validateDockerComposeStructure(yaml);
    expect(validation.errors).toEqual([]);
    expect(validation.valid).toBe(true);

    // 验证 ZAI 特定的环境变量
    expect(hasEnvVar(yaml, 'hagicode', 'ANTHROPIC_AUTH_TOKEN')).toBe(true);
    expect(hasEnvVar(yaml, 'hagicode', 'ANTHROPIC_URL')).toBe(true);

    // 验证 ZAI URL
    expect(getServiceEnvVar(yaml, 'hagicode', 'ANTHROPIC_URL')).toBe('https://open.bigmodel.cn/api/anthropic');

    // 验证注释
    expect(yaml).toContain('# Zhipu AI (ZAI)');

    expect(yaml).toMatchSnapshot('quick-start-zai-zh-CN');
  });

  it('should generate valid YAML structure for Anthropic provider (zh-CN)', async () => {
    const config = createAnthropicProviderConfig();
    const yaml = generateYAML(config, undefined, 'zh-CN', FIXED_DATE);

    // 验证 YAML 结构
    const validation = validateDockerComposeStructure(yaml);
    expect(validation.errors).toEqual([]);
    expect(validation.valid).toBe(true);

    // 验证 Anthropic 特定的配置
    expect(hasEnvVar(yaml, 'hagicode', 'ANTHROPIC_AUTH_TOKEN')).toBe(true);

    // 验证没有 ANTHROPIC_URL（Anthropic 官方 API 不需要）
    expect(hasEnvVar(yaml, 'hagicode', 'ANTHROPIC_URL')).toBe(false);

    // 验证注释
    expect(yaml).toContain('# Anthropic Official API');

    expect(yaml).toMatchSnapshot('quick-start-anthropic-zh-CN');
  });

  it('should generate valid YAML structure for custom provider (zh-CN)', async () => {
    const config = createCustomProviderConfig({
      anthropicUrl: 'https://custom-api.example.com'
    });
    const yaml = generateYAML(config, undefined, 'zh-CN', FIXED_DATE);

    // 验证 YAML 结构
    const validation = validateDockerComposeStructure(yaml);
    expect(validation.errors).toEqual([]);
    expect(validation.valid).toBe(true);

    // 验证自定义 API 特定的配置
    expect(hasEnvVar(yaml, 'hagicode', 'ANTHROPIC_AUTH_TOKEN')).toBe(true);
    expect(hasEnvVar(yaml, 'hagicode', 'ANTHROPIC_URL')).toBe(true);

    // 验证自定义 URL
    expect(getServiceEnvVar(yaml, 'hagicode', 'ANTHROPIC_URL')).toBe('https://custom-api.example.com');

    // 验证注释
    expect(yaml).toContain('# Custom Anthropic-compatible API');

    expect(yaml).toMatchSnapshot('quick-start-custom-zh-CN');
  });

  it('should parse YAML correctly and validate service dependencies', async () => {
    const config = createQuickStartConfig();
    const yaml = generateYAML(config, undefined, 'zh-CN', FIXED_DATE);

    const parsed = validateDockerComposeStructure(yaml);
    expect(parsed.valid).toBe(true);

    // 快速启动使用 SQLite，没有 postgres 服务，所以没有 depends_on
    const hagicodeService = parsed.parsed.services.hagicode;
    expect(hagicodeService.depends_on).toBeUndefined();

    // 验证没有 postgres 服务
    expect(parsed.parsed.services.postgres).toBeUndefined();
  });

  it('should validate network configuration', async () => {
    const config = createQuickStartConfig();
    const yaml = generateYAML(config, undefined, 'zh-CN', FIXED_DATE);

    const parsed = validateDockerComposeStructure(yaml);
    expect(parsed.valid).toBe(true);

    // 验证网络配置
    const network = parsed.parsed.networks['pcode-network'];
    expect(network).toBeDefined();
    expect(network.driver).toBe('bridge');

    // 验证 hagicode 服务连接到网络
    expect(parsed.parsed.services.hagicode.networks).toContain('pcode-network');

    // 快速启动使用 SQLite，没有 postgres 服务
    expect(parsed.parsed.services.postgres).toBeUndefined();
  });

  it('should validate restart policy', async () => {
    const config = createQuickStartConfig();
    const yaml = generateYAML(config, undefined, 'zh-CN', FIXED_DATE);

    const parsed = validateDockerComposeStructure(yaml);
    expect(parsed.valid).toBe(true);

    // 验证重启策略
    expect(parsed.parsed.services.hagicode.restart).toBe('unless-stopped');

    // 快速启动使用 SQLite，没有 postgres 服务
    expect(parsed.parsed.services.postgres).toBeUndefined();
  });

  it('should generate explicit executor branches for Codex and OpenCode without default-provider routing', async () => {
    const config = createMockConfig({
      enabledExecutors: ['codex', 'opencode'],
      anthropicAuthToken: '',
      codexApiKey: 'test-codex-key',
      openCodeModel: 'anthropic/claude-sonnet-4'
    });
    const yaml = generateYAML(config, undefined, 'zh-CN', FIXED_DATE);

    const validation = validateDockerComposeStructure(yaml);
    expect(validation.errors).toEqual([]);
    expect(validation.valid).toBe(true);

    expect(hasEnvVar(yaml, 'hagicode', 'CODEX_API_KEY')).toBe(true);
    expect(hasEnvVar(yaml, 'hagicode', 'AI__Providers__Providers__OpenCodeCli__Enabled')).toBe(true);
    expect(hasEnvVar(yaml, 'hagicode', 'AI__Providers__DefaultProvider')).toBe(false);
    expect(hasVolume(yaml, 'hagicode_saves')).toBe(true);
    expect(getServiceVolumes(yaml, 'hagicode')).toContain('hagicode_data:/app/data');
    expect(getServiceVolumes(yaml, 'hagicode')).toContain('hagicode_saves:/app/saves');
    expect(yaml).not.toContain('CODEBUDDY_API_KEY');
    expect(yaml).not.toContain('QODER_PERSONAL_ACCESS_TOKEN');
    expect(yaml).not.toContain('copilot-cli:');

    expect(yaml).toMatchSnapshot('quick-start-retained-executor-matrix-zh-CN');
  });

  it('should export the managed OpenCode config volume in quick-start mode by default', async () => {
    const config = createMockConfig({
      enabledExecutors: ['opencode'],
      anthropicAuthToken: '',
      openCodeModel: 'anthropic/claude-sonnet-4',
      openCodeConfigMode: 'default-managed',
    });
    const yaml = generateYAML(config, undefined, 'zh-CN', FIXED_DATE);

    const validation = validateDockerComposeStructure(yaml);
    expect(validation.errors).toEqual([]);
    expect(validation.valid).toBe(true);
    expect(hasVolume(yaml, 'opencode-config-data')).toBe(true);
    expect(hasVolume(yaml, 'opencode-auth-data')).toBe(true);
    expect(hasVolume(yaml, 'opencode-models-data')).toBe(true);
    expect(getServiceVolumes(yaml, 'hagicode')).toContain('opencode-config-data:/home/hagicode/.config/opencode');
    expect(getServiceVolumes(yaml, 'hagicode')).toContain('opencode-auth-data:/home/hagicode/.local/share/opencode');
    expect(getServiceVolumes(yaml, 'hagicode')).toContain('opencode-models-data:/home/hagicode/.cache/opencode');

    expect(yaml).toMatchSnapshot('quick-start-opencode-managed-volume-zh-CN');
  });

  it('should emit managed persistence volumes only for retained executors in quick-start mode', async () => {
    const config = createMockConfig({
      enabledExecutors: ['codex', 'opencode'],
      anthropicAuthToken: '',
      codexApiKey: 'test-codex-key',
      openCodeModel: 'anthropic/claude-sonnet-4',
      workdirPath: '/workspace',
    });
    const yaml = generateYAML(config, undefined, 'zh-CN', FIXED_DATE);

    const validation = validateDockerComposeStructure(yaml);
    expect(validation.errors).toEqual([]);
    expect(validation.valid).toBe(true);

    expect(hasVolume(yaml, 'codex-data')).toBe(true);
    expect(hasVolume(yaml, 'opencode-config-data')).toBe(true);
    expect(hasVolume(yaml, 'opencode-auth-data')).toBe(true);
    expect(hasVolume(yaml, 'opencode-models-data')).toBe(true);
    expect(getServiceVolumes(yaml, 'hagicode')).toContain('codex-data:/home/hagicode/.codex');
    expect(getServiceVolumes(yaml, 'hagicode')).toContain('opencode-config-data:/home/hagicode/.config/opencode');
    expect(getServiceVolumes(yaml, 'hagicode')).toContain('opencode-auth-data:/home/hagicode/.local/share/opencode');
    expect(getServiceVolumes(yaml, 'hagicode')).toContain('opencode-models-data:/home/hagicode/.cache/opencode');
    expect(hasService(yaml, 'copilot-cli')).toBe(false);
    expect(hasVolume(yaml, 'copilot-data')).toBe(false);
    expect(hasVolume(yaml, 'codebuddy-data')).toBe(false);
    expect(hasVolume(yaml, 'kimi-data')).toBe(false);
    expect(hasVolume(yaml, 'qoder-data')).toBe(false);
    expect(hasVolume(yaml, 'kiro-data')).toBe(false);

    expect(yaml).toMatchSnapshot('quick-start-retained-cli-persistence-zh-CN');
  });
});
